--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-unity-view",
-  "version": "1.3.3",
-  "description": "",
+  "name": "react-native-unity-view-reinvented",
+  "version": "1.3.8",
+  "description": "React Native unity view allows you embed unity in React Native",
   "main": "out/index.js",
   "typings": "out/index.d.ts",
   "scripts": {
